# libzkp

./: .gitignore  Cargo.toml  Steel.sol  build-c.sh  build-rust.sh  build.sh  calculate-hash.js  cbindgen.toml  codebase.sh  groth16-bindings.c  groth16.c  groth16.data  groth16.h  groth16.js  groth16.wasm  groth16_test  groth16_wasm  groth16_wasm.c  groth16_wasm.js  groth16_wasm.wasm  index.js  input.json  input_fixed.json  libgroth16.wasm  main.c  output.json  package-lock.json  package.json  receipt.json  reset.sh  rust-build.sh  rust-toolchain.toml  setup-enviroment.sh  test.lua  test_address.lua
.cargo/: config.toml
c_src/: main.c
circom/: proof.json  proof_uncompressed.json
circuit/Multiplication/: generate-proof.sh  john.json  proof_hex.json  vkey_hex.json  vkey_uncompressed.json
go_src/: go.mod  libgroth16.h
go_src/cmd/: main.go
go_src/groth16wrapper/: groth16wrapper.go
include/: groth16.h  groth16_wasm.h  libgroth16_wasm.h  zkp.h
pkg/: groth16_wasm.js  groth16_wasm_bg.wasm  groth16_wasm_bg.wasm.d.ts  zkp_bg.wasm
src/: helpers.rs  lib.rs  main.rs
src/adapter/: mod.rs  parser_bls.rs  parser_bn.rs  types.rs
src/circom/: circuit_final.zkey  input.json  pot12_0001.ptau  proof.json  public.json  test.r1cs.json  verification_key.json  verifier.sol  witness.json  witness.wtns
src/circom/test_cpp/: test.cpp
src/verifier/: mod.rs
src/verifier_bls/: mod.rs
src/verifier_bn/: mod.rs
tests/: integration_tests.rs
tests/fixtures/: proof.json  verification_key.json
