[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkp"
crate-type = ["staticlib"]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }

risc0-zkvm = { version = "1.1.2", default-features = false }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.1", default-features = false }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
rand = "0.8"
subtle = "2.2.1"

[profile.release]
debug = true
panic = "abort"