[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkp"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
pairing_ce = { version = "=0.30", git="https://github.com/matter-labs/zksync-crypto.git", package = "zksync_pairing", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "serde_json/std"
]

[profile.release]
debug = true
panic = "abort"